--- a/HoTienQuoc_CV_SinhVien/src/main/resources/application.properties
+++ b/HoTienQuoc_CV_SinhVien/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=HoTienQuoc_CV_SinhVien
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+spring.web.resources.static-locations=classpath:/static/,classpath:/assets/
+
